objects/LPI_Demo_Scenario__c.object
<CustomObject>
    <fields>
        <fullName>Demo_Script__c</fullName>
        <label>Demo Script</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Demo_Type__c</fullName>
        <label>Demo Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LPI</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OmniScript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OmniScript</label>
        <referenceTo>OmniProcess</referenceTo>
        <relationshipLabel>LPI Demo Scenarios</relationshipLabel>
        <relationshipName>LPI_Demo_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personas__c</fullName>
        <label>Personas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Demo_Script__c</fullName>
        <label>Secondary Demo Script</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Occupational</fullName>
                </value>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LPI Demo Scenario</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Demo_Script__c</columns>
        <columns>OmniScript__c</columns>
        <columns>Personas__c</columns>
        <columns>Demo_Type__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LPI Demo Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LPI Demo Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>